21 modul: skrypt do uruchamiania przegladarki

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.3.9.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'war'
 }
 
 group = 'com.crud'
@@ -24,6 +25,8 @@ dependencies {
 	}
 	testCompileOnly 'org.projectlombok:lombok:1.18.18'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.18'
+
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
 test {
