--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=postgresql
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+#spring.jpa.database=postgresql
+#spring.datasource.url=${JDBC_DATABASE_URL}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
-#spring.jpa.database=mysql
-#spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
-#spring.datasource.username=kacper_bojarski
-#spring.datasource.password=Kacper180409
+spring.jpa.database=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
+spring.datasource.username=kacper_bojarski
+spring.datasource.password=Kacper180409
