--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europ
 spring.datasource.username=kacper_bojarski
 spring.datasource.password=Kacper180409
 
+# EMAIL CONFIGURATION
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 trello.api.endpoint.prod=https://api.trello.com/1
 trello.app.username=kacperbojarski2
 trello.app.key=1033b6bd32d2fd988980cd08aa8c8949
