--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,11 @@ group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
+jar {
+	baseName = 'tasks'
+	version = '0.0.1'
+}
+
 repositories {
 	mavenCentral()
 }
