--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+admin.mail = k.bojarski.pl@gmail.com
 #spring.jpa.database=postgresql
 #spring.datasource.url=${JDBC_DATABASE_URL}
 #spring.datasource.username=${JDBC_DATABASE_USERNAME}
