--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,22 @@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 admin.mail = k.bojarski.pl@gmail.com
+management.endpoints.web.exposure.include=*
+# ACTUATOR INFO
+info.app.name=Tasks Application
+info.app.description=Application has been created on Kodilla course!
+info.app.version=1.0.0
+info.app.owner.name=Kacper 
+info.app.owner.surname=Bojarski
+info.app.administrator.email=k.bojarski.pl@gmail.com 
+info.app.administrator.adress.street=Ladna ulica,
+info.app.administrator.adress.number=45
+# COMPANY DATA
+info.company.name=TaskCrudAppCreator
+info.company.email=tasks@crud.com
+info.company.goal=Our goal is to learn Java
+info.company.phone=435624189
+
 #spring.jpa.database=postgresql
 #spring.datasource.url=${JDBC_DATABASE_URL}
 #spring.datasource.username=${JDBC_DATABASE_USERNAME}
