--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.18'
 	compile 'io.springfox:springfox-swagger2:2.9.2'
 	compile 'io.springfox:springfox-swagger-ui:2.9.2'
+	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	annotationProcessor 'org.projectlombok:lombok:1.18.18'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
