--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,6 +29,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/task_crud?serverTimezone=Europ
 spring.datasource.username=kacper_bojarski
 spring.datasource.password=Kacper180409
 
+#HEROKU
+heroku.getTask.endpoint=https://infinite-sierra-60690.herokuapp.com/v1/task/getTasks
+
 # EMAIL CONFIGURATION
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -37,6 +40,7 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# TRELLO
 trello.api.endpoint.prod=https://api.trello.com/1
 trello.app.username=kacperbojarski2
 trello.app.key=1033b6bd32d2fd988980cd08aa8c8949
